# synthetic_data_generation

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Code_Quality_Review_Report.md  DUAL_GENERATOR_README.md  Dockerfile  README.md  compass_artifact_wf-9f02984f-207b-43cc-a7a4-6aa37feee0f9_text_markdown.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  todos.md
.atl/: skill-registry.md
.claude/commands/: code-review.md
article/: sn-article-en.aux  sn-article-en.bbl  sn-article-en.blg  sn-article-en.fdb_latexmk  sn-article-en.fls  sn-article-en.out  sn-article-en.tex  sn-article-en.txt  sn-article-es.aux  sn-article-es.bbl  sn-article-es.blg  sn-article-es.fdb_latexmk  sn-article-es.fls  sn-article-es.out  sn-article-es.pytxcode  sn-article-es.tex  sn-article-es.txt  sn-article.aux  sn-article.blg  sn-article.fdb_latexmk  sn-article.fls  sn-bibliography.bib
article/.atl/: skill-registry.md
docs/: USER_STORY_TO_TASKS.md
examples/: advanced_pipeline.py  demo_pipeline.py  instruction_pipeline.py  model_comparison.py  salony_dual_generator_pipeline.py  salony_pipeline.py  salony_single_generator_pipeline.py  simple_explain_pipeline.py  user_story_to_tasks.py
notebooks/: demo.ipynb  salony.ipynb  user_story_to_tasks.ipynb
scripts/: clear_cache.py
simple_pipeline/: __init__.py  base_step.py  pipeline.py
test/: test_pipeline.py
tests/: benchmark_results.csv  test_dual_generator.py  test_json_repair.py  test_judge_validation.py  test_new_steps.py  test_parallel_execution.py  test_pipeline.py  test_steps.py  test_validate_user_stories.py
(+112 files in other folders)
