[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-pipeline"
version = "0.1.5"
authors = [
    {name = "Angel L. Valdés"}
]
description = "A simplified Distilabel-inspired pipeline for DataFrame processing with Ollama"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "ollama>=0.1.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
# Automatically find packages